# rewact

./: CLAUDE.md  rewact_sam3_viz_slurm.sh  rewact_train_slurm.sh
configs/: train_sam3.yaml
docker/: .dockerignore  Dockerfile  docker_build.sh  run_local.sh
lerobot_policy_rewact/src/lerobot_policy_rewact/: configuration_rewact.py  modeling_rewact.py
lerobot_policy_rewact/src/lerobot_policy_rewact/vision/: __init__.py  sam3.py
scripts/: smoke_test_vision_encoders.py  train.py  visualise_sam3_focus.py
vision/: README.md  pyproject.toml
vision/src/vision/: __init__.py  sam3.py
